--- a/package/phylogenize/inst/rmd/phylogenize-report.Rmd
+++ b/package/phylogenize/inst/rmd/phylogenize-report.Rmd
@@ -97,7 +97,12 @@ taxa that are neither.
 # Unpack pz.db and phenotype results to current environment
 list2env(core[["list_pheno"]], environment())
 
-if (!("phenotype_results") %in% names(core[["list_pheno"]])) { skip_phenotypes <- TRUE } else { skip_phenotypes <- FALSE }
+if (("phenotype_results" %in% names(core[["list_pheno"]])) &&
+    !(is.null(core[["list_pheno"]][["phenotype_results"]]))) {
+    skip_phenotypes <- FALSE
+} else {
+    skip_phenotypes <- TRUE
+}
 
 if (!(skip_phenotypes)) {
 # Also unpack "phenotype, phenoP, mapped.observed" into current environment
@@ -126,6 +131,15 @@ write.table(file=file.path(pz.options('out_dir'), "phenotype.tab"),
 } else {
 
 pz.message("Skipping phenotypes, as not found (possibly because POMS was used)")
+
+# Create dummy phenotypes for significant gene plot 
+all_species <- Reduce(union, map(pz.db$trees, \(.) .$tip.label))
+phenotype <- setNames(rep(0, length(poms_sp)), poms_sp)
+phenoP <- 0
+
+pheno.scale <- get.pheno.plotting.scales(phenotype, pz.db$trees, phenoP)
+plotted.pheno.trees <- plot.phenotype.trees(phenotype, pz.db$trees, pz.db$taxonomy, pheno.scale)
+
 plots <- NULL 
 }
 # be a little parsimonious with memory here
