fixes to POMS integration

--- a/package/phylogenize/inst/rmd/phylogenize-report.Rmd
+++ b/package/phylogenize/inst/rmd/phylogenize-report.Rmd
@@ -210,13 +210,18 @@ an FDR of 5%.
 ```{r write_associations, warning = FALSE, message = FALSE, echo=FALSE, cache=FALSE}
 
 signif_genes <- core[["list_signif"]]
+pos.sig.count <- purrr::map_dbl(cirr_fam_abd_poms_mini$list_signif$pos.sig, length)
 
-pos.sig <- data.frame(
-  Taxon = names(signif_genes[["pos.sig"]]),
-  `Significant Genes` = sapply(signif_genes[["pos.sig"]], length),
-  row.names = NULL
-)
-phylogenize::getClinDT(pos.sig)
+if ("neg.sig" %in% names(core[["list_signif"]])) {
+    neg.sig.count <- purrr::map_dbl(cirr_fam_abd_poms_mini$list_signif$neg.sig, length)
+    sig.count <- full_join(enframe(pos.sig.count, name="Taxon", value="Pos. Sig. Genes"),
+                           enframe(neg.sig.count, name="Taxon", value="Neg. Sig. Genes"),
+                           by="Taxon")
+} else {
+    sig.count <- enframe(pos.sig.count, name="Taxon", value="Pos. Sig. Genes")
+}
+
+phylogenize::getClinDT(sig.count)
 
 write.csv(file = file.path(pz.options('out_dir'), "pos-sig-thresholded.csv"),
 	  signif_genes[["pos.sig.descs"]])
