--- a/package/phylogenize/inst/rmd/phylogenize-report.Rmd
+++ b/package/phylogenize/inst/rmd/phylogenize-report.Rmd
@@ -112,6 +112,7 @@ pheno.distros <- plot.pheno.distributions(phenotype, pz.db)
 pheno.scale <- get.pheno.plotting.scales(phenotype, pz.db$trees, phenoP)
 plotted.pheno.trees <- plot.phenotype.trees(phenotype, pz.db$trees, pz.db$taxonomy, pheno.scale)
 
+
 # Template for plots
 template <- c(
     "### Page {{nm}}\n",
@@ -210,10 +211,10 @@ an FDR of 5%.
 ```{r write_associations, warning = FALSE, message = FALSE, echo=FALSE, cache=FALSE}
 
 signif_genes <- core[["list_signif"]]
-pos.sig.count <- purrr::map_dbl(cirr_fam_abd_poms_mini$list_signif$pos.sig, length)
+pos.sig.count <- purrr::map_dbl(signif_genes$pos.sig, length)
 
 if ("neg.sig" %in% names(core[["list_signif"]])) {
-    neg.sig.count <- purrr::map_dbl(cirr_fam_abd_poms_mini$list_signif$neg.sig, length)
+    neg.sig.count <- purrr::map_dbl(signif_genes$neg.sig, length)
     sig.count <- full_join(enframe(pos.sig.count, name="Taxon", value="Pos. Sig. Genes"),
                            enframe(neg.sig.count, name="Taxon", value="Neg. Sig. Genes"),
                            by="Taxon")
